// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense List with expenses 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={500}
      createdAt={0}
      desc="test 1"
      id="1"
      key="1"
      note="test 1 note"
    />
    <ExpenseListItem
      amount={1000}
      createdAt={-345600000}
      desc="test 2"
      id="2"
      key="2"
      note="test 2 note"
    />
    <ExpenseListItem
      amount={200}
      createdAt={345600000}
      desc="test 3"
      id="3"
      key="3"
      note="test 3 note"
    />
  </div>
</div>
`;

exports[`should render paragraph with no expenses 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--no-data"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
